--- a/app/nootab.css
+++ b/app/nootab.css
@@ -1,7 +1,10 @@
 :root {
   --background-color: #252525;
   --text-color: #fff;
-  --link-color: #4fa3ef;
+  --font-family: "IBM Plex Mono", -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, Helvetica, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  --font-size: 125%;
 }
 
 *,
@@ -11,24 +14,26 @@
 }
 
 body {
-  margin: 24px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
-    sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
-  font-size: 18px;
+  width: 90vw;
+  margin: 4rem;
+  font-family: var(--font-family);
+  font-size: var(--font-size);
   line-height: 1.5;
   color: var(--text-color);
   background-color: var(--background-color);
-  transition: color 0.2s ease-in-out, background-color 0.2s ease-in-out;
 }
 
 a {
   color: var(--link-color);
 }
 
+main {
+  min-height: 100vh;
+}
+
 textarea {
-  display: block;
   width: 100%;
-  height: calc(100vh - 6rem);
+  height: calc(100vh);
   appearance: none;
   font: inherit;
   border: none;
@@ -38,15 +43,22 @@ textarea {
   resize: none;
 }
 
-button[data-theme] {
+textarea::placeholder {
+  color: inherit;
+  opacity: 0.3;
+}
+textarea::-webkit-input-placeholder {
+  color: inherit;
+  opacity: 0.3;
+}
+fieldset {
+  display: flex;
+  border-color: var(--text-color);
+  /* border: none; */
+}
+input {
   display: inline-block;
-  width: 2rem;
-  height: 2rem;
-  margin-right: 0.25rem;
-  border: 1px solid var(--text-color);
-  border-radius: 50%;
-  font-size: 0;
-  background: transparent;
-  outline: 0;
-  cursor: pointer;
+}
+.lowercase {
+  text-transform: lowercase;
 }
